fixed sidenav align, fixed portrait resizing, tried fixing nav BG resize

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -49,7 +49,7 @@ body {
 header {
   height: 150px;
   background-image: url("material/bilder/nav_bg_notext_small.png");
-  background-size:   100%;
+  background-size: auto 100%;
   background-repeat: no-repeat;
   position: relative;
   background-color: rgba(0, 0, 0, 0)
@@ -76,6 +76,7 @@ header {
   bottom: 50px;
   width: 99vw;
   align-items: baseline;
+  border: 1px solid red;
 }
 
 .flex-container > div {
@@ -93,6 +94,7 @@ header {
 
 #border-right{
   flex: 0 0 4.7vw;
+  border: 1px solid green;
 }
 
 /* Language-switcher*/
@@ -105,7 +107,7 @@ header {
   height: 1.5vw;
   margin-left: 0.3vw;
   float: left;
-  color:black;
+  color: black;
   border-style: none;
   cursor: pointer;
   border-radius: 50%;
@@ -154,10 +156,16 @@ nav a:hover {
   flex: 0 0 20.8vw;
 }
 
+.sidenav {
+  position: relative;
+  right: 0;
+}
+
 .sidenav a {
   color: black;
   text-decoration: none;
   font-size: 18px;
+  float: right;
 }
 
 /*Name*/
@@ -186,8 +194,8 @@ nav a:hover {
 }
 
 #portrait > img {
+  object-fit: cover;
   width: 100%;
-  height: 100%;
 }
 
 /*Zitat*/
